2013-03-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/i386/bsdXX.c (grub_openbsd_find_ramdisk): Use
	multiplication rather than division.

2013-03-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/arg.c (grub_arg_list_alloc): Use shifts rather
	than divisions.

2013-03-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/verify.c (grub_verify_signature): Use unsigned
	operations to have intended shifts and not divisions.

2013-03-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/i386/pc/plan9.c (fill_disk): Fix types to use
	intended shifts rather than division.

2013-03-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/datetime.h (grub_datetime2unixtime): Fix unixtime
	computation for some years before epoch. Avode confusing division
	while on it.

2013-03-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/video/i386/pc/vbe.c
	(grub_video_vbe_print_adapter_specific_info): Replace division by
	shifts.

2013-03-10  Vladimir Serbinenko  <phcoder@gmail.com>

	Adjust types in gdb module to have intended unsigned shifts rather than
	signed divisions.

2013-03-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/hfs.c (grub_hfs_read_file): Avoid divmod64 since the
	maximum size is 4G - 1 on hfs

2013-03-10  Vladimir Serbinenko  <phcoder@gmail.com>

	Avoid costly 64-bit division in grub_get_time_ms on most platforms.

2013-03-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/fshelp.c (grub_fshelp_log2blksize): Remove now unused
	function.

2013-03-07  Andrey Borzenkov <arvidjaar@gmail.com>

	* grub-core/fs/iso9660.c (add_part): Remove always_inline attribute
	causing gcc error with gcc 4.7.1.

2013-03-07  Nickolai Zeldovich <nickolai@csail.mit.edu>

	* grub-core/commands/acpi.c (grub_acpi_create_ebda): Don't
	dereference null pointer. While the code is technically correct, gcc
	may eliminate a null check if pointer is already dereferenced.
